🧹 Major codebase cleanup and reorganization
- Removed 24 unnecessary files (reports, temp files, duplicates)
- Organized documentation into docs/ folder with archive
- Enhanced README with better structure and quick start guide
- Added PROJECT_STRUCTURE.md for codebase documentation
- Updated .gitignore to exclude temp and report files
- Cleaned up package.json scripts
- Fixed TypeScript imports in App.tsx
- Build verified and working successfully

Project is now production-ready! 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,12 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 # API Keys and secrets
 *.key
 *.pem
 config/secrets.json
-.env.example
 
 # IDE files
 .vscode/
@@ -174,3 +174,14 @@ $RECYCLE.BIN/
 # Project specific
 /public/uploads
 /storage/temp
+
+# Reports and temporary files (generated during testing/verification)
+*-report.json
+*-summary.json
+*_temp.*
+*.txt.bak
+
+# Qodo AI
+.qodo/
+*_temp.*
+*.txt.bak
